# MADS-ML-MaxN

./: .gitattributes  .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  search.json
01_gridsearch/: summary.html
02_mlflow/: summary.html
03_rnn/: notebook.ipynb  summary.html
04_ray/: summary.html
05_deployment/: summary.html
06_ethics/: summary.html
1-gridsearch/: notebook.ipynb  summary.html  summary.qmd
1-hypertuning-gridsearch/: notebook.py
2-mlflow/: notebook.ipynb  summary.html  summary.qmd
3-hypertuning-rnn/: notebook.py
3-rnn/: notebook.ipynb  summary.html  summary.qmd
4-ray/: summary.html  summary.qmd
5-deployment/: summary.html  summary.qmd
6-ethics/: instructions.md  summary.html  summary.qmd
assets/: references.bib
chapters/: deployment.html  ethics.html  gridsearch.html  references.html
site_libs/bootstrap/: bootstrap-e57895220f6cc48b1afb2fc2d69653f2.min.css
